Changing tenant scheme